my projects section done

--- a/index.html
+++ b/index.html
@@ -346,6 +346,74 @@
             text-align: center;
         }
 
+        /* my projects */
+        body>section:nth-child(4)>main>h2{
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 500;
+            position: absolute;
+            left: 150px;
+            top: 30px;
+            margin: 0;
+        }
+
+        body>section:nth-child(4)>main>hr {
+            color: white;
+            width: 80%;
+            position: absolute;
+            margin: auto;
+            top: 65px;
+            left: 0;
+            right: 0;
+            border: 1px solid white;
+        }
+
+        body>section:nth-child(4)>main>section:nth-child(3) {
+            display: flex;
+            width: 80%;
+            position: absolute;
+            margin: auto;
+            right: 0;
+            left: 0;
+            top: 110px;
+            height: 460px;
+            justify-content: space-around;
+        }
+
+        body>section:nth-child(4)>main>section:nth-child(3)>div {
+            background-color: #2f2d2d;
+            margin: 10px;
+            width: 350px;
+            border-radius: 10px;
+            position: relative;
+        }
+
+        body>section:nth-child(4)>main>section:nth-child(3)>div>img {
+            width: 100%;
+            border-radius: 10px 10px 4px 4px;
+            height: 233px;
+        }
+
+        body>section:nth-child(4)>main>section:nth-child(3)>div>h4 {
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300;
+            margin-left: 20px;
+            margin-top: 10px;
+            margin-bottom: 0;
+            text-decoration: underline;
+        }
+
+        body>section:nth-child(4)>main>section:nth-child(3)>div>article {
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 100;
+            font-size: 0.8em;
+            margin-left: 20px;
+            margin-right: 20px;
+            margin-top: 20px;
+            line-height: 25px;
+        }
 
         /* common elements */
         body>section>main {
@@ -681,8 +749,8 @@
             </section>
         </header>
         <main>
-            <h4>My <span>Projects</span></h4>
-
+            <h2>My <span class="highlight_red">Projects</span></h2>
+            <hr>
             <section>
                 <div>
                     <img src="assets/resources/images/octavian-dan-b21Ty33CqVs-unsplash.jpg" alt="project 1 image"
