--- a/index.html
+++ b/index.html
@@ -484,6 +484,113 @@
             line-height: 25px;
         }
 
+        /* my educational qualifications */
+        body>section:nth-child(6)>main>h2{
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 500;
+            position: absolute;
+            left: 150px;
+            top: 30px;
+            margin: 0;
+        }
+
+        body>section:nth-child(6)>main>hr {
+            color: white;
+            width: 80%;
+            position: absolute;
+            margin: auto;
+            top: 65px;
+            left: 0;
+            right: 0;
+            border: 1px solid white;
+        }
+
+        body>section:nth-child(6)>main>section:nth-child(3) {
+            display: flex;
+            width: 80%;
+            position: absolute;
+            margin: auto;
+            right: 0;
+            left: 0;
+            top: 110px;
+            height: 460px;
+            justify-content: space-around;
+        }
+
+        body>section:nth-child(6)>main>section:nth-child(3)>div {
+            background-color: #2f2d2d;
+            margin: 10px;
+            width: 350px;
+            border-radius: 10px;
+            position: relative;
+        }
+
+        body>section:nth-child(6)>main>section:nth-child(3)>div>img {
+            width: 100%;
+            border-radius: 10px 10px 4px 4px;
+            height: 233px;
+        }
+
+        body>section:nth-child(6)>main>section:nth-child(3)>div>hgroup>h4 {
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300;
+            margin-top: 20px;
+            margin-bottom: 0;
+            text-align: center;
+            text-decoration: underline;
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+        body>section:nth-child(6)>main>section:nth-child(3)>div>hgroup>h6 {
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300;
+            margin-top: 20px;
+            margin-bottom: 0;
+            text-align: center;
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+        body>section:nth-child(6)>main>section:nth-child(3)>div>div {
+            position: absolute;
+            margin: auto;
+            left: 0;
+            right: 0;
+            bottom: 0px;
+            background-color: white;
+            text-align: center;
+            height: 80px;
+            border-radius: 0 0 10px 10px;
+        }
+
+        /* body>section:nth-child(6)>main>section:nth-child(3)>div>div>a>img */
+        /* mcg logo */
+        .edu_mcg{
+            width: 60px;
+            position: absolute;
+            margin: auto;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+        }
+
+        /* ijse logo */
+        body>section:nth-child(6)>main>section:nth-child(3)>div:nth-child(3)>div>a>img{
+            width: 160px;
+            position: absolute;
+            margin: auto;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+        }
+ 
+
         /* common elements */
         body>section>main {
             /* background-color: #131313; */
@@ -969,40 +1076,46 @@
             </section>
         </header>
         <main>
-            <h4>My <span>Educational Qualifications</span></h4>
-
+            <h2>My <span class="highlight_red">Educational Qualifications</span></h2>
+            <hr>
             <section>
                 <div>
                     <img src="assets/resources/images/homework-gb544ddc8f_640.jpg" alt="image" width="300">
                     <hgroup>
-                        <h5>G.C.E Ordinary Level Examination (2017)</h5>
+                        <h4>G.C.E Ordinary Level Examination (2017)</h4>
                         <h6>G/Mahinda College</h6>
                     </hgroup>
                     <div>
-                        <img src="assets/resources/images/MahindaCollegeLogo.jpeg" alt="image" width="50">
+                        <a href="https://www.mahindacollege.lk/" target="_blank">
+                            <img src="assets/resources/images/MahindaCollegeLogo.png" alt="image" class="edu_mcg">
+                        </a>       
                     </div>
                 </div>
                 <div>
                     <img src="assets/resources/images/math-g89f39f0c4_640.jpg" alt="image" width="300">
                     <hgroup>
-                        <h5>G.C.E Advanced Level Examination (2020)</h5>
+                        <h4>G.C.E Advanced Level Examination (2020)</h4>
                         <h6>G/Mahinda College</h6>
                     </hgroup>
                     <div>
-                        <img src="assets/resources/images/MahindaCollegeLogo.jpeg" alt="image" width="50">
+                        <a href="https://www.mahindacollege.lk/" target="_blank">
+                            <img src="assets/resources/images/MahindaCollegeLogo.png" alt="image" class="edu_mcg">
+                        </a>                    
                     </div>
                 </div>
                 <div>
                     <img src="assets/resources/images/a-book-g139e543d7_640.jpg" alt="image" width="300">
                     <hgroup>
-                        <h5>Graduate Diploma
-                            in Software Engineering</h5>
+                        <h4>Graduate Diploma
+                            in Software Engineering (2022-2024)</h4>
                         <h6>Institute of Java Software
-                            Engineering (2022-2024)</h6>
+                            Engineering</h6>
                     </hgroup>
                     <div>
-                        <img src="assets/resources/images/326351595_686971346552200_5455708532631235658_n-removebg-preview.png"
-                            alt="image" width="50">
+                        <a href="https://ijse.lk/" target="_blank">
+                            <img src="assets/resources/images/326351595_686971346552200_5455708532631235658_n-removebg-preview.png"
+                            alt="image">
+                        </a>
                     </div>
                 </div>
             </section>
