adjusted font sizes

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             right: 0;
             top: 30%;
             text-align: center;
-            font-size: 4em;
+            font-size: 4vw;
             font-family: 'Poppins', sans-serif;
             font-weight: 700;
             color: white;
@@ -155,7 +155,7 @@
             width: max-content;
             font-family: 'Poppins', sans-serif;
             font-weight: 100;
-            font-size: 1.5em;
+            font-size: 1.8vw;
             color: white;
         }
 
@@ -166,6 +166,7 @@
             right: 0;
             top: 52%;
             text-align: center;
+            font-size: 1vw;
             font-family: 'Poppins', sans-serif;
             color: white;
             text-align: center;
@@ -219,8 +220,9 @@
         body>section:nth-child(3)>main>section>hgroup>h1 {
             position: absolute;
             margin: auto;
-            top: 29%;
+            top: 28%;
             left: 3%;
+            font-size: 2.2vw;
             color: white;
         }
 
@@ -229,6 +231,7 @@
             margin: auto;
             top: 35%;
             left: 3%;
+            font-size: 1.2vw;
             color: white;
             font-weight: 100;
         }
@@ -236,7 +239,7 @@
         body>section:nth-child(3)>main>section>hr {
             position: absolute;
             margin: auto;
-            top: 39%;
+            top: 40%;
             left: 3%;
             color: white;
             border: 1px solid white;
@@ -252,7 +255,8 @@
             width: 60%;
             color: white;
             margin-top: 20px;
-            line-height: 150%;
+            line-height: 170%;
+            font-size: 1vw;
         }
 
         body>section:nth-child(3)>main>section>nav>a>button {
@@ -341,7 +345,7 @@
             text-align: center;
             padding-top: 2px;
             font-family: 'Poppins', sans-serif;
-            font-size: 0.8em;
+            font-size: 0.9vw;
         }
 
         body>section:nth-child(4)>main>section:nth-child(4) {
@@ -560,6 +564,7 @@
             color: white;
             font-family: 'Poppins', sans-serif;
             font-weight: 300;
+            font-size: 1vw;
             margin-left: 6%;
             margin-right: 6%;
             margin-top: 4%;
@@ -571,7 +576,7 @@
             color: white;
             font-family: 'Poppins', sans-serif;
             font-weight: 100;
-            font-size: 0.8em;
+            font-size: 0.8vw;
             margin-left: 6%;
             margin-right: 6%;
             margin-top: 6%;
