--- a/assignments/CSS/Transitions/Case 3/index.html
+++ b/assignments/CSS/Transitions/Case 3/index.html
@@ -7,43 +7,50 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="stylesheet" href="normalize.css">
     <style>
+
         body {
             background-color: #546478;
         }
 
-        body>div {
+        body>section {
+            width: max-content;
+            height: max-content;
             position: absolute;
             margin: auto;
             top: 0;
             bottom: 0;
             left: 0;
             right: 0;
-            width: max-content;
-            height: max-content;
-            box-sizing: border-box;
+            box-shadow: 2px 2px 10px 2px black;
             overflow-y: hidden;
         }
 
-        body>div>img {
+        body>section>div:first-child{
+            width: max-content;
+            height: max-content;
+            box-sizing: border-box;
+            z-index: 2;
+        }
+
+        body>section>div:first-child>img {
             width: 440px;
             height: 350px;
             border: 2px solid white;
-            box-shadow: 2px 2px 10px 2px black;
         }
 
-        body>div:hover div {
+        body>section>div:first-child:hover div {
             height: 350px;
             transition-duration: 1s;
             transition-property: height;
         }
 
-        body>div:hover a>img {
+        body>section>div:hover a>img {
             top: 45%;
             transition-duration: 1s;
             transition-property: top;
         }
 
-        body>div>div {
+        body>section>div:first-child>div {
             width: 440px;
             height: 0px;
             background-color: black;
@@ -57,7 +64,7 @@
             transition-property: height;
         }
 
-        body>div>a>img {
+        body>section>div>a>img {
             position: absolute;
             margin: auto;
             left: 0;
@@ -67,18 +74,20 @@
             transition-duration: 1s;
             transition-property: top;
         }
+
     </style>
 </head>
 
 <body>
-    <div>
-        <img src="car.jpg" alt="">
-        <div></div>
-        <a href="">
-            <img src="delete.png" alt="">
-        </a>
-    </div>
-
+    <section>
+        <div>
+            <img src="car.jpg" alt="">
+            <div></div>
+            <a href="">
+                <img src="delete.png" alt="">
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
