--- a/index.html
+++ b/index.html
@@ -327,13 +327,17 @@
         }
 
         /* skills */
+        #skills{
+            height: 1100px;
+        }
+
         #skills>section>h2 {
             color: white;
             font-family: 'Poppins', sans-serif;
             font-weight: 500;
             position: absolute;
             left: 150px;
-            top: 15.5%;
+            top: 120px;
             margin: 0;
         }
 
@@ -342,7 +346,7 @@
             width: 80%;
             position: absolute;
             margin: auto;
-            top: 20%;
+            top: 155px;
             left: 0;
             right: 0;
             border: 1px solid white;
@@ -351,31 +355,31 @@
         #skills>section>section:nth-child(3) {
             display: flex;
             width: 80%;
+            column-gap: 60px;
+            row-gap: 40px;
+            flex-wrap: wrap;
             align-items: center;
             justify-content: space-around;
-            height: 16%;
-            position: absolute;
+            height: max-content;
+            padding: 20px;
+            position: relative;
             margin: auto;
             right: 0;
             left: 0;
-            top: 24%;
+            top: 178px;
             border-radius: 10px;
             background-color: #2f2d2d;
         }
 
-        #skills>section>section:nth-child(3)>div {
-            width: 5%;
-        }
-
         #skills>section>section:nth-child(3)>div>figure>img {
             border-radius: 10px;
-            width: 100%;
+            width: 60px;
             border: 2px solid white;
         }
 
         #skills>section>section:nth-child(3)>div>figure:hover img {
             border: 5px solid white;
-            width: 110%;
+            width: 70px;
         }
 
         #skills>section>section:nth-child(3)>div>figure:hover figcaption {
@@ -391,23 +395,26 @@
         }
 
         #skills>section>section:nth-child(4) {
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+            grid-template-rows: repeat(2,1fr);
+            row-gap: 15px;
+            column-gap: 10px;
             width: 80%;
-            position: absolute;
+            position: relative;
             margin: auto;
             right: 0;
             left: 0;
-            top: 42%;
-            height: 46%;
-            justify-content: space-around;
+            top: 220px;
+            text-align: center;
         }
 
         #skills>section>section:nth-child(4)>div {
             background-color: #2f2d2d;
             margin: 10px;
-            width: 350px;
             border-radius: 10px;
             position: relative;
+            height: 300px;
         }
 
         #skills>section>section:nth-child(4)>div:hover h3 {
@@ -474,16 +481,13 @@
             margin-left: 20px;
             margin-right: 20px;
             text-align: center;
-
-        }
-
-        #skills>.footer_div {
-            top: 90%;
+            transition-duration: 1s;
+            transition-property: color;
         }
 
         /* my projects */
-        #my_projects>.footer_div {
-            top: 86%;
+        #my_projects{
+            height: 1200px;
         }
 
         #my_projects>section>h2 {
@@ -492,7 +496,7 @@
             font-weight: 500;
             position: absolute;
             left: 10%;
-            top: 15.5%;
+            top: 120px;
             margin: 0;
         }
 
@@ -501,28 +505,30 @@
             width: 80%;
             position: absolute;
             margin: auto;
-            top: 20%;
+            top: 155px;
             left: 0;
             right: 0;
             border: 1px solid white;
         }
 
         #my_projects>section>section:nth-child(3) {
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+            grid-template-rows: repeat(2,1fr);
+            row-gap: 20px;
+            column-gap: 20px;
             width: 80%;
-            position: absolute;
+            position: relative;
             margin: auto;
             right: 0;
             left: 0;
-            top: 24%;
-            height: 60%;
+            top: 200px;
             justify-content: space-around;
         }
 
         #my_projects>section>section:nth-child(3)>div {
             background-color: #2f2d2d;
-            margin: 1%;
-            width: 28%;
+            margin: 20px;
             border-radius: 10px;
             position: relative;
             border: 5px solid hsla(0, 0%, 49%, 0.5);
@@ -556,13 +562,14 @@
             text-decoration: underline;
             transition-duration: 1s;
             transition-property: color;
+            font-size: 1vw;
         }
 
         #my_projects>section>section:nth-child(3)>div>article {
             color: white;
             font-family: 'Poppins', sans-serif;
             font-weight: 100;
-            font-size: 0.8em;
+            font-size: 0.8vw;
             margin-left: 6%;
             margin-right: 6%;
             margin-top: 6%;
@@ -572,8 +579,9 @@
         }
 
         /* my assignments */
-        #my_assignments>.footer_div {
-            top: 86%;
+
+        #my_assignments{
+            height: 1200px;
         }
 
         #my_assignments>section>h2 {
@@ -582,7 +590,7 @@
             font-weight: 500;
             position: absolute;
             left: 10%;
-            top: 15.5%;
+            top: 120px;
             margin: 0;
         }
 
@@ -591,30 +599,33 @@
             width: 80%;
             position: absolute;
             margin: auto;
-            top: 20%;
+            top: 155px;
             left: 0;
             right: 0;
             border: 1px solid white;
         }
 
         #my_assignments>section>section:nth-child(3) {
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+            grid-template-rows: repeat(2,1fr);
+            row-gap: 20px;
+            column-gap: 20px;
             width: 80%;
-            position: absolute;
+            position: relative;
             margin: auto;
             right: 0;
             left: 0;
-            top: 24%;
-            height: 60%;
+            top: 200px;
             justify-content: space-around;
         }
 
         #my_assignments>section>section:nth-child(3)>div {
             background-color: #2f2d2d;
-            margin: 1%;
-            width: 28%;
+            margin: 20px;
             border-radius: 10px;
             position: relative;
+            border: 5px solid hsla(0, 0%, 49%, 0.5);
         }
 
         #my_assignments>section>section:nth-child(3)>div:hover h4 {
@@ -663,8 +674,9 @@
         }
 
         /* my educational qualifications */
-        #my_edu_quali>.footer_div {
-            top: 86%;
+
+        #my_edu_quali{
+            height: 100vh;
         }
 
         #my_edu_quali>section>h2 {
@@ -673,7 +685,7 @@
             font-weight: 500;
             position: absolute;
             left: 10%;
-            top: 15.5%;
+            top: 120px;
             margin: 0;
         }
 
@@ -682,7 +694,7 @@
             width: 80%;
             position: absolute;
             margin: auto;
-            top: 20%;
+            top: 155px;
             left: 0;
             right: 0;
             border: 1px solid white;
@@ -690,21 +702,24 @@
 
         #my_edu_quali>section>section:nth-child(3) {
             display: flex;
+            flex-wrap: wrap;
+            column-gap: 10px;
+            row-gap: 20px;
             width: 80%;
-            position: absolute;
+            position: relative;
             margin: auto;
             right: 0;
             left: 0;
-            top: 24%;
-            height: 60%;
-            justify-content: space-around;
+            top: 200px;
+            justify-content: center;
+            box-sizing: border-box;
         }
 
         #my_edu_quali>section>section:nth-child(3)>div {
             background-color: #2f2d2d;
-            margin: 1%;
-            width: 28%;
+            margin: 20px;
             border-radius: 10px;
+            width: calc(100%/3.5);
             position: relative;
             border: 5px solid rgb(118, 108, 108);
         }
@@ -746,7 +761,7 @@
             font-family: 'Poppins', sans-serif;
             font-weight: 300;
             margin-top: 5%;
-            margin-bottom: 0;
+            margin-bottom: 80px;
             text-align: center;
             padding-left: 4%;
             padding-right: 4%;
@@ -1041,9 +1056,8 @@
         }
 
         .sub_section {
-            /* background-color: #131313; */
-            background-color: burlywood;
-            border: 2px solid greenyellow;
+            background-color: #131313;
+            /* background-color: burlywood; */
             position: absolute;
             width: 100%;
             height: 100%;
@@ -1492,6 +1506,7 @@
                             <figcaption>Photoshop</figcaption>
                         </figure>
                     </div>
+                   
                 </section>
 
                 <!-- 3 big rectangles/services -->
@@ -1524,24 +1539,36 @@
                             engage
                             audiences with style.</p>
                     </div>
+                    <div>
+                        <div>
+                            <i class="fa-solid fa-display"></i>
+                        </div>
+                        <h3>Desktop Application Development</h3>
+                        <p>With a mastery of desktop application development, From concept to completion, I deliver
+                            exceptional applications that elevate user experiences and drive business growth.</p>
+                    </div>
+                    <div>
+                        <div>
+                            <i class="fa-solid fa-earth-americas"></i>
+                        </div>
+                        <h3>Web Application Development</h3>
+                        <p>I create visually stunning, user-friendly, and seamless online experiences. From e-commerce
+                            platforms to custom web solutions, I deliver innovative applications that engage users and
+                            drive
+                            business success.</p>
+                    </div>
+                    <div>
+                        <div>
+                            <i class="fa-solid fa-pen-nib"></i>
+                        </div>
+                        <h3>Graphic Designing</h3>
+                        <p>As a master of graphic design, I create captivating visuals that leave a lasting impact. From
+                            brand identities to visual narratives, my innovative designs amplify brand presence and
+                            engage
+                            audiences with style.</p>
+                    </div>
                 </section>
             </section>
-
-            <div class="footer_div">
-                <div>
-                    <a href="">
-                        <button>
-                            <p>&#8249;</p>
-                        </button>
-                    </a>
-                    <p>1</p>
-                    <a href="">
-                        <button>
-                            <p>&#8250;</p>
-                        </button>
-                    </a>
-                </div>
-            </div>
         </section>
 
         <!-- My projects -->
@@ -1578,24 +1605,36 @@
                                 effortlessly organize and execute successful events with this versatile software.</p>
                         </article>
                     </div>
+                    <div>
+                        <img src="assets/resources/images/octavian-dan-b21Ty33CqVs-unsplash.jpg" alt="project 1 image"
+                            width="300">
+                        <h4>Project Smart Inventory</h4>
+                        <article>
+                            <p>Streamline inventory management with SmartInventory. Easily track stock levels, optimize
+                                purchasing, and improve inventory turnover for efficient business operations.</p>
+                        </article>
+                    </div>
+                    <div>
+                        <img src="assets/resources/images/featured-image.jpg" alt="project 2 image" width="300">
+                        <h4>Project Data Analyzer</h4>
+                        <article>
+                            <p>Unlock valuable insights from your data with DataAnalyzer. Leverage advanced analytics
+                                and
+                                intuitive visualizations to make data-driven decisions and uncover trends and
+                                opportunities
+                            </p>
+                        </article>
+                    </div>
+                    <div>
+                        <img src="assets/resources/images/project.png" alt="project 3 image" width="300">
+                        <h4>Project Event Planner</h4>
+                        <article>
+                            <p>Simplify event planning with EventPlanner. From guest management to budget tracking,
+                                effortlessly organize and execute successful events with this versatile software.</p>
+                        </article>
+                    </div>
                 </section>
             </section>
-
-            <div class="footer_div">
-                <div>
-                    <a href="">
-                        <button>
-                            <p>&#8249;</p>
-                        </button>
-                    </a>
-                    <p>1</p>
-                    <a href="">
-                        <button>
-                            <p>&#8250;</p>
-                        </button>
-                    </a>
-                </div>
-            </div>
         </section>
 
         <!-- My Assignments -->
@@ -1629,24 +1668,33 @@
                                 strong writing skills and attention to detail</p>
                         </article>
                     </div>
+                    <div>
+                        <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
+                        <h4>E-commerce Website Front-end Development</h4>
+                        <article>
+                            <p>Develop the front-end of an e-commerce website using HTML, CSS, and JavaScript</p>
+                        </article>
+                    </div>
+                    <div>
+                        <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
+                        <h4>Bug Fixing and Testing</h4>
+                        <article>
+                            <p>Identify and fix bugs in a software application through thorough testing and effective
+                                solutions
+                            </p>
+                        </article>
+                    </div>
+                    <div>
+                        <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
+                        <h4>Software Documentation and Technical Writing</h4>
+                        <article>
+                            <p>Create comprehensive software documentation, including user manuals and technical guides,
+                                with
+                                strong writing skills and attention to detail</p>
+                        </article>
+                    </div>
                 </section>
             </section>
-
-            <div class="footer_div">
-                <div>
-                    <a href="">
-                        <button>
-                            <p>&#8249;</p>
-                        </button>
-                    </a>
-                    <p>1</p>
-                    <a href="">
-                        <button>
-                            <p>&#8250;</p>
-                        </button>
-                    </a>
-                </div>
-            </div>
         </section>
 
         <!-- My Educational Qualifications -->
@@ -1694,24 +1742,9 @@
                             </a>
                         </div>
                     </div>
+                
                 </section>
             </section>
-
-            <div class="footer_div">
-                <div>
-                    <a href="">
-                        <button>
-                            <p>&#8249;</p>
-                        </button>
-                    </a>
-                    <p>1</p>
-                    <a href="">
-                        <button>
-                            <p>&#8250;</p>
-                        </button>
-                    </a>
-                </div>
-            </div>
         </section>
 
         <!-- get in touch -->
