--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         }
 
         /* skills */
-        #skills{
+        #skills {
             height: 1100px;
         }
 
@@ -396,8 +396,8 @@
 
         #skills>section>section:nth-child(4) {
             display: grid;
-            grid-template-columns: repeat(3,1fr);
-            grid-template-rows: repeat(2,1fr);
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
             row-gap: 15px;
             column-gap: 10px;
             width: 80%;
@@ -486,7 +486,7 @@
         }
 
         /* my projects */
-        #my_projects{
+        #my_projects {
             height: 1200px;
         }
 
@@ -513,8 +513,8 @@
 
         #my_projects>section>section:nth-child(3) {
             display: grid;
-            grid-template-columns: repeat(3,1fr);
-            grid-template-rows: repeat(2,1fr);
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
             row-gap: 20px;
             column-gap: 20px;
             width: 80%;
@@ -580,7 +580,7 @@
 
         /* my assignments */
 
-        #my_assignments{
+        #my_assignments {
             height: 1200px;
         }
 
@@ -607,8 +607,8 @@
 
         #my_assignments>section>section:nth-child(3) {
             display: grid;
-            grid-template-columns: repeat(3,1fr);
-            grid-template-rows: repeat(2,1fr);
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
             row-gap: 20px;
             column-gap: 20px;
             width: 80%;
@@ -675,7 +675,7 @@
 
         /* my educational qualifications */
 
-        #my_edu_quali{
+        #my_edu_quali {
             height: 100vh;
         }
 
@@ -1068,6 +1068,7 @@
         .page_sec {
             height: 100vh;
             position: relative;
+            border: 2px solid greenyellow;
         }
 
         .footer_div {
@@ -1259,7 +1260,7 @@
             }
 
             /* about me  */
-            #about_me{
+            #about_me {
                 height: 735px;
             }
 
@@ -1273,11 +1274,11 @@
                 font-size: 15px;
             }
 
-            #about_me>section>hr{
+            #about_me>section>hr {
                 top: 125px;
             }
 
-            #about_me>section>aside{
+            #about_me>section>aside {
                 width: 100%;
                 top: 165px;
                 bottom: auto;
@@ -1292,7 +1293,7 @@
                 height: max-content;
             }
 
-            #about_me>section>section{
+            #about_me>section>section {
                 position: relative;
                 top: 320px;
                 width: 100%;
@@ -1301,7 +1302,7 @@
                 /* height: max-content; */
             }
 
-            #about_me>section>section>hgroup>h1{
+            #about_me>section>section>hgroup>h1 {
                 position: relative;
                 font-size: 30px;
                 line-height: 36px;
@@ -1318,13 +1319,13 @@
                 width: max-content;
             }
 
-            #about_me>section>section>hr{
+            #about_me>section>section>hr {
                 width: 80%;
                 position: relative;
                 top: 20px;
             }
 
-            #about_me>section>section>article{
+            #about_me>section>section>article {
                 position: relative;
                 top: 24px;
                 width: 80%;
@@ -1332,11 +1333,82 @@
                 font-size: 10px;
             }
 
-            #about_me>section>section>nav>a>button{
+            #about_me>section>section>nav>a>button {
                 position: relative;
                 top: 40px;
                 height: 28px;
                 left: 0;
+            }
+
+            /* my skills  */
+
+            #skills {
+                height: 2660px;
+            }
+
+            #skills>section>h2 {
+                width: 80%;
+                text-align: left;
+                margin: auto;
+                top: 100px;
+                left: 0;
+                right: 0;
+                font-size: 15px;
+            }
+
+            #skills>section>hr {
+                top: 125px;
+            }
+
+            #skills>section>section:nth-child(3) {
+                top: 160px;
+                column-gap: 20px;
+                row-gap: 18px;
+            }
+
+            #skills>section>section:nth-child(3)>div>figure>img {
+                width: 44px;
+            }
+
+            #skills>section>section:nth-child(3)>div>figure>figcaption {
+                font-size: 3vw;
+            }
+
+            #skills>section>section:nth-child(3)>div>figure:hover img {
+                border: 5px solid white;
+                width: 43px;
+            }
+
+            #skills>section>section:nth-child(3)>div>figure:hover figcaption {
+                font-size: 3.5vw;
+            }
+
+            #skills>section>section:nth-child(4){
+                top: 186px;
+                display: flex;
+                flex-direction: column;
+                width: 90%;
+            }
+
+            #skills>section>section:nth-child(4)>div{
+                height: 325px;
+            }
+
+            #skills>section>section:nth-child(4)>div>div {
+                position: relative;
+            }
+
+            #skills>section>section:nth-child(4)>div>h3{
+                position: relative;
+                top: 46px;
+            }
+
+            #skills>section>section:nth-child(4)>div>p {
+                position: relative;
+                top: 70px;
+                margin-bottom: 20px;
+                margin-left: 10px; 
+    margin-right: 10px
             }
 
             /* common */
@@ -1351,6 +1423,8 @@
 
             body>div:nth-child(4)>a>i {
                 font-size: 2em;
+                background-color: white;
+                color: #EB4A4C;
             }
 
             body>div:nth-child(4):hover a>i {
@@ -1506,7 +1580,7 @@
                             <figcaption>Photoshop</figcaption>
                         </figure>
                     </div>
-                   
+
                 </section>
 
                 <!-- 3 big rectangles/services -->
@@ -1742,7 +1816,7 @@
                             </a>
                         </div>
                     </div>
-                
+
                 </section>
             </section>
         </section>
